# archinstall-post-install

./: Cargo.toml
.config/: hub
.github/workflows/: main.yml  release.yml  release_binary.yml
src/: example.rs  main.rs  packages.json
