[package]
name = "arch-post-install"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
curl = "0.4.43"
inquire = { version = "0.2.1", features = ["builtin_validators", "date"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
sudo = "0.6.0"
